--- a/Project/microcontroller_timing.uvprojx
+++ b/Project/microcontroller_timing.uvprojx
@@ -322,7 +322,7 @@
             <wLevel>2</wLevel>
             <uThumb>0</uThumb>
             <uSurpInc>0</uSurpInc>
-            <uC99>0</uC99>
+            <uC99>1</uC99>
             <useXO>0</useXO>
             <v6Lang>1</v6Lang>
             <v6LangP>1</v6LangP>
@@ -333,7 +333,7 @@
             <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define></Define>
+              <Define>USE_FULL_LL_DRIVER</Define>
               <Undefine></Undefine>
               <IncludePath></IncludePath>
             </VariousControls>
@@ -384,6 +384,56 @@
               <FileType>1</FileType>
               <FilePath>.\main.c</FilePath>
             </File>
+            <File>
+              <FileName>asciiLib.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\asciiLib.c</FilePath>
+            </File>
+            <File>
+              <FileName>displayctrl.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\displayctrl.c</FilePath>
+            </File>
+            <File>
+              <FileName>LCD_ILI9325.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\LCD_ILI9325.c</FilePath>
+            </File>
+            <File>
+              <FileName>systemFunctions.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\systemFunctions.c</FilePath>
+            </File>
+            <File>
+              <FileName>utility.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\utility.c</FilePath>
+            </File>
+            <File>
+              <FileName>firstTrafficLightsWithThreeColors.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\firstTrafficLightsWithThreeColors.c</FilePath>
+            </File>
+            <File>
+              <FileName>messageBrockerThread.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\messageBrockerThread.c</FilePath>
+            </File>
+            <File>
+              <FileName>secondTrafficLightsWithThreeColors.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\secondTrafficLightsWithThreeColors.c</FilePath>
+            </File>
+            <File>
+              <FileName>inputThreads.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\inputThreads.c</FilePath>
+            </File>
+            <File>
+              <FileName>thirdTrafficLightsWithThreeColors.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\thirdTrafficLightsWithThreeColors.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -414,6 +464,48 @@
       </component>
       <component Capiversion="1.0" Cclass="CMSIS" Cgroup="RTOS" Csub="Keil RTX" Cvendor="ARM" Cversion="4.81.0" condition="RTOS RTX">
         <package name="CMSIS" schemaVersion="1.3" url="http://www.keil.com/pack/" vendor="ARM" version="5.0.0"/>
+        <targetInfos>
+          <targetInfo name="Target 1"/>
+        </targetInfos>
+      </component>
+      <component Cbundle="Standalone" Cclass="Device" Cgroup="STM32Cube LL" Csub="COMMON" Cvendor="Keil" Cversion="1.11.3" Pre_Include_Global_h="#define USE_FULL_LL_DRIVER" condition="STM32F3 STARTUP LL UTILS RCC PWR">
+        <package name="STM32F3xx_DFP" schemaVersion="1.7.2" url="http://www.keil.com/pack/" vendor="Keil" version="2.2.2"/>
+        <targetInfos>
+          <targetInfo name="Target 1"/>
+        </targetInfos>
+      </component>
+      <component Cbundle="Standalone" Cclass="Device" Cgroup="STM32Cube LL" Csub="CRC" Cvendor="Keil" Cversion="1.11.3" condition="STM32F3 LL">
+        <package name="STM32F3xx_DFP" schemaVersion="1.7.2" url="http://www.keil.com/pack/" vendor="Keil" version="2.2.2"/>
+        <targetInfos>
+          <targetInfo name="Target 1"/>
+        </targetInfos>
+      </component>
+      <component Cbundle="Standalone" Cclass="Device" Cgroup="STM32Cube LL" Csub="GPIO" Cvendor="Keil" Cversion="1.11.3" condition="STM32F3 LL">
+        <package name="STM32F3xx_DFP" schemaVersion="1.7.2" url="http://www.keil.com/pack/" vendor="Keil" version="2.2.2"/>
+        <targetInfos>
+          <targetInfo name="Target 1"/>
+        </targetInfos>
+      </component>
+      <component Cbundle="Standalone" Cclass="Device" Cgroup="STM32Cube LL" Csub="PWR" Cvendor="Keil" Cversion="1.11.3" condition="STM32F3 LL">
+        <package name="STM32F3xx_DFP" schemaVersion="1.7.2" url="http://www.keil.com/pack/" vendor="Keil" version="2.2.2"/>
+        <targetInfos>
+          <targetInfo name="Target 1"/>
+        </targetInfos>
+      </component>
+      <component Cbundle="Standalone" Cclass="Device" Cgroup="STM32Cube LL" Csub="RCC" Cvendor="Keil" Cversion="1.11.3" condition="STM32F3 LL">
+        <package name="STM32F3xx_DFP" schemaVersion="1.7.2" url="http://www.keil.com/pack/" vendor="Keil" version="2.2.2"/>
+        <targetInfos>
+          <targetInfo name="Target 1"/>
+        </targetInfos>
+      </component>
+      <component Cbundle="Standalone" Cclass="Device" Cgroup="STM32Cube LL" Csub="RTC" Cvendor="Keil" Cversion="1.11.3" condition="STM32F3 LL">
+        <package name="STM32F3xx_DFP" schemaVersion="1.7.2" url="http://www.keil.com/pack/" vendor="Keil" version="2.2.2"/>
+        <targetInfos>
+          <targetInfo name="Target 1"/>
+        </targetInfos>
+      </component>
+      <component Cbundle="Standalone" Cclass="Device" Cgroup="STM32Cube LL" Csub="UTILS" Cvendor="Keil" Cversion="1.11.3" condition="STM32F3 LL">
+        <package name="STM32F3xx_DFP" schemaVersion="1.7.2" url="http://www.keil.com/pack/" vendor="Keil" version="2.2.2"/>
         <targetInfos>
           <targetInfo name="Target 1"/>
         </targetInfos>
