added permissions to R/W operations

--- a/Project/buttons.ini
+++ b/Project/buttons.ini
@@ -1,3 +1,6 @@
+MAP 0x48000810, 0x48FFFFFF READ WRITE //Add R/W permissions
+MAP 0x4001100C, 0x40011FFF READ WRITE
+
 // Change PC4 state
 FUNC void toggle_C4() {
     _WDWORD(0x4001100C, _RDWORD(0x4001100C) ^ 0x10);
