--- a/Project/buttons.ini
+++ b/Project/buttons.ini
@@ -3,12 +3,12 @@ MAP 0x4001100C, 0x40011FFF READ WRITE
 
 // Change PC4 state
 FUNC void toggle_C4() {
-    _WDWORD(0x4001100C, _RDWORD(0x4001100C) ^ 0x10);
+    _WDWORD(0x48000814, _RDWORD(0x48000814) ^ 0x10);
 }
 
 // Change PC6 state
 FUNC void toggle_C6() {
-    _WDWORD(0x4001100C, _RDWORD(0x4001100C) ^ 0x40);
+    _WDWORD(0x48000814, _RDWORD(0x48000814) ^ 0x40);
 }
 
 // Define buttons for Keil Debug Toolbox
